--- a/Assignments/OliviaAugust_A03_DataExploration.Rmd
+++ b/Assignments/OliviaAugust_A03_DataExploration.Rmd
@@ -23,25 +23,31 @@ The completed exercise is due on <>.
 
 1. Check your working directory, load necessary packages (tidyverse), and upload two datasets: the ECOTOX neonicotinoid dataset (ECOTOX_Neonicotinoids_Insects_raw.csv) and the Niwot Ridge NEON dataset for litter and woody debris (NEON_NIWO_Litter_massdata_2018-08_raw.csv). Name these datasets "Neonics" and "Litter", respectively. 
 ```{r,  message = FALSE}
-
+# Check working directory
+getwd()
+# Load packages
+library(tidyverse)
+# Upload datasets
+Neonics <- read.csv("../Data/Raw/ECOTOX_Neonicotinoids_Insects_raw.csv")
+Litter <- read.csv("../Data/Raw/NEON_NIWO_Litter_massdata_2018-08_raw.csv")
 ```
 
 ## Learn about your system
 
 2. The neonicotinoid dataset was collected from the Environmental Protection Agency's ECOTOX Knowledgebase, a database for ecotoxicology research. Neonicotinoids are a class of insecticides used widely in agriculture. The dataset that has been pulled includes all studies published on insects. Why might we be interested in the ecotoxicologoy of neonicotinoids on insects? Feel free to do a brief internet search if you feel you need more background information. 
 
-> Answer: 
+> Answer: Ecotoxicology can be important when assessing impacted waterbodies. To determine the appropriate concentration of a pollutant in a waterbody insect and macroinvertibrae toxicology can provide insight into the ecological health of a waterway and the impacts of certain pollutants and concentrations on wildlife ecosystems.
 
 3. The Niwot Ridge litter and woody debris dataset was collected from the National Ecological Observatory Network, which collectively includes 81 aquatic and terrestrial sites across 20 ecoclimatic domains. 32 of these sites sample forest litter and woody debris, and we will focus on the Niwot Ridge long-term ecological research (LTER) station in Colorado. Why might we be interested in studying litter and woody debris that falls to the ground in forests? Feel free to do a brief internet search if you feel you need more background information. 
 
-> Answer: 
+> Answer: Studying the litter and woody debris would provide information regarding the nutient loading and availability. This could impact downstream waterways as well as ecosystems in the woods and in those waterways.
 
 4. How is litter and woody debris sampled as part of the NEON network? Read the NEON_Litterfall_UserGuide.pdf document to learn more. List three pieces of salient information about the sampling methods here: 
 
 > Answer: 
-*
-*
-*
+*Sampling of woody debris occurred in tower plots. The size and quantity of plots depended on the height of vegetation and site conditions.
+*Sampling at ground traps occurred once a year with targeted sampling at elevated traps occurring more frequently depending on the time of year and type of vegetation.
+*Based on the number of sampling groups, collections, and data values, there should not be more than 3,440 data product instances for any site. 
 
 
 
@@ -50,12 +56,13 @@ The completed exercise is due on <>.
 5. What are the dimensions of the dataset?
 
 ```{r}
-
+dim(Neonics)
 ```
 
 6. Using the `summary` function on the "Effects" column, determine the most common effects that are studied. Why might these effects specifically be of interest?
 ```{r}
-
+Neonics$Effect <- as.factor(Neonics$Effect)
+summary(Neonics$Effect)
 ```
 
 > Answer: 
@@ -63,18 +70,19 @@ The completed exercise is due on <>.
 7. Using the `summary` function, determine the six most commonly studied species in the dataset (common name). What do these species have in common, and why might they be of interest over other insects? Feel free to do a brief internet search for more information if needed.
 
 ```{r}
-
+Neonics$Species.Common.Name <- as.factor(Neonics$Species.Common.Name)
+summary(Neonics$Species.Common.Name)
 ```
 
-> Answer: 
+> Answer: The six most studied species are the honeybee, parasitic wasp, buff tailed bumblebee, Carniolan Honeybee, Bumblebee, and the Italian honeybee. These species are likely the most studied due to their role in pollination and the rapid decline in bee populations over the recent decades.
 
 8. Concentrations are always a numeric value. What is the class of Conc.1..Author. in the dataset, and why is it not numeric?
 
 ```{r}
-
+class(Neonics$Conc.1..Author.)
 ```
 
-> Answer:
+> Answer: Conc.1..Author is a character class variable. The values have characters in them such as ~, /, and < which resulted in the classification as character.
 
 
 
@@ -82,56 +90,66 @@ The completed exercise is due on <>.
 
 9. Using `geom_freqpoly`, generate a plot of the number of studies conducted by publication year. 
 ```{r}
-
+ggplot(Neonics) +
+  geom_freqpoly(aes(x = Publication.Year), binwidth =1)
 ```
 
 10. Reproduce the same graph but now add a color aesthetic so that different Test.Location are displayed as different colors.
 ```{r}
-
+ggplot(Neonics) +
+  geom_freqpoly(aes(x = Publication.Year, color = Test.Location), binwidth =1)
 ```
 
 Interpret this graph. What are the most common test locations, and do they differ over time?
 
-> Answer: 
+> Answer: The most common test locations are field natural and lab. In the 90s, field natural was the most common location with lab testing becoming more prominent in the early 2000s.
 
 11. Create a bar graph of Endpoint counts. What are the two most common end points, and how are they defined? Consult the ECOTOX_CodeAppendix for more information. 
 
-```{r}
-
+```{r, fig.height = 3, fig.width = 12}
+ggplot(Neonics, aes(x = Endpoint))+
+  geom_bar()
 ```
 
-> Answer: 
+> Answer: LOEL and NOEL are the two most common endpoints. LOEL is  defined as the Lowest-observable-effect-level: lowest dose (concentration) producing effects that were significantly different (as reported by authors) from responses of controls (LOEAL/LOEC). NOEL is defined as No-observable-effect-level: highest dose (concentration) producing effects not significantly different from responses of controls according to author's reported statistical test (NOEAL/NOEC).
 >
 
 ## Explore your data (Litter)
 
 12. Determine the class of collectDate. Is it a date? If not, change to a date and confirm the new class of the variable. Using the `unique` function, determine which dates litter was sampled in August 2018. 
 ```{r}
-
+class(Litter$collectDate)
+Litter$collectDate <- as.Date(Litter$collectDate)
+class(Litter$collectDate)
+unique(Litter$collectDate)
 ```
 
 13. Using the `unique` function, determine how many plots were sampled at Niwot Ridge. How is the information obtained from `unique` different from that obtained from `summary`?
 
 ```{r}
-
+unique(Litter$plotID)
 ```
 
-> Answer: 
+> Answer: Twelve plots were sampled at Niwot Ridge. This information is different from the 'summary' since this doesnt provide a count of how many samples were taken at each. It only provides a list of the plots.
 
 14. Create a bar graph of functionalGroup counts. This shows you what type of litter is collected at the Niwot Ridge sites. Notice that litter types are fairly equally distributed across the Niwot Ridge sites.
 ```{r}
-
+ggplot(Litter, aes(x=functionalGroup))+
+  geom_bar()
 ```
 
 15. Using `geom_boxplot` and `geom_violin`, create a boxplot and a violin plot of dryMass by functionalGroup. 
 ```{r}
-
+ggplot(Litter, aes(functionalGroup, dryMass))+
+  geom_boxplot()
+ggplot(Litter, aes(functionalGroup, dryMass))+
+  geom_violin()
 ```
 
 Why is the boxplot a more effective visualization option than the violin plot in this case?
 
-> Answer: 
+> Answer: The boxplot shows us the spread of data Dry Mass data by functional group. Ideally, the violin graph would do the same but since there is not enough data to create the bow shape you cannot make out the quartiles from the graph. Therefore, the boxplot provides more informtaiton and is a more effective visualization option.
 
 What type(s) of litter tend to have the highest biomass at these sites? 
 
-> Answer: 
+> Answer: Based on the boxplot, needles tend to have the highest biomass with the median just below 2.5.
