--- a/Lessons/04_Lab_DataWrangling.Rmd
+++ b/Lessons/04_Lab_DataWrangling.Rmd
@@ -57,11 +57,11 @@ NTL.phys.data.JunethruOctober <- filter(NTL.phys.data, daynum %in% c(152:304))
 # Exercise 1: 
 # filter NTL.phys.data for the year 1999
 # what code do you need to use, based on the class of the variable?
-
+NTL.phys.data.1999 <- filter(NTL.phys.data, year4 %in% c(1999))
 
 # Exercise 2: 
 # filter NTL.phys.data for Tuesday Lake from 1990 through 1999.
-
+NTL.phys.data.1990s <- filter(NTL.phys.data, year4 %in% c(1990:1999),lakename %in% c("Tuesday Lake"))
 
 ```
 Question: Why don't we filter using row numbers?
@@ -82,13 +82,20 @@ NTL.phys.data.processed <-
   mutate(temperature_F = (temperature_C*9/5) + 32)
 
 #Exercise 3: Using a pipe filter NTL.phys.data for Tuesday Lake from 1990 through 1999 only for July 
-
-
-
+NTL.phys.data.exercise3 <- 
+  NTL.phys.data %>%
+  filter(lakename == "Tuesday Lake") %>%
+  filter(year4 %in% c(1990:1999)) %>% mutate(month = month(sampledate)) %>% filter(month == 7)
 
 
 #Exercise 4: Using the data from part 3, a pipe and the summarise() function find the mean surface temperature (hints: you will need to add another filter for depth==0). Make sure you eliminate NAs before computing the means
+SurfTemp <- 
+  NTL.phys.data.exercise3 %>% 
+  filter(depth == 0) %>% 
+  drop_na(temperature_C) %>% 
+  group_by(lakename)
 
+summary(SurfTemp$temperature_C)
   
 ```
 
@@ -98,9 +105,11 @@ For gather we will use `pivot_longer` and for spread we will use `pivot_wider`.
 
 ```{r}
 #Exercise 5: gather irradiance data (measured in the water column and measured on the deck of the sampling boat) into one column using pivot_longer
-
+NTL.phys.data.exercise5 <- pivot_longer(NTL.phys.data, irradianceWater:irradianceDeck, names_to = "Sampling Location", values_to = "Irradiance")
 
 #Exercise 6: spread temperatureC into more than one column based on the depth
+NTL.phys.data.exercise6 <- pivot_wider(NTL.phys.data, names_from = depth, values_from = temperature_C)
+
 
 ```
 
