--- a/Lessons/04_Part1_DataWrangling.Rmd
+++ b/Lessons/04_Part1_DataWrangling.Rmd
@@ -114,12 +114,12 @@ class(NTL.phys.data$year4)
 
 # Exercise: 
 # filter NTL.phys.data for Tuesday Lake from 1990 through 1999.
-
+NTL.phys.data.90s <- filter(NTL.phys.data, year4 %in% c(1990:1999))
 
 ```
 Question: Why don't we filter using row numbers?
 
-> Answer: 
+> Answer: Filter could change the order of the rows and we want to call based on variables
 
 ### Arrange
 
@@ -132,7 +132,7 @@ NTL.phys.data.depth.descending <- arrange(NTL.phys.data, desc(depth))
 # Exercise: 
 # Arrange NTL.phys.data by temperature, in descending order. 
 # Which dates, lakes, and depths have the highest temperatures?
-
+NTL.phys.data.temp.descending <- arrange(NTL.phys.data, desc(temperature_C))
 
 ```
 ### Select
