--- a/Lessons/04_Part2_DataWrangling.Rmd
+++ b/Lessons/04_Part2_DataWrangling.Rmd
@@ -17,6 +17,7 @@ editor_options:
 
 ```{r, message = FALSE}
 getwd()
+install.packages("ldpy")
 library(plyr)
 library(tidyverse)
 library(lubridate)
