--- a/Lessons/07_Lab_TimeSeries.Rmd
+++ b/Lessons/07_Lab_TimeSeries.Rmd
@@ -81,13 +81,21 @@ BRA_complete <- inner_join(Rainfall_BR_processed,Temp_BR_processed)
 ```{r}
 
 #Exercise 5: Check if there is any missing data for both temperature and rainfall series.
-
+summary(BRA_complete)
 
 
 
 #Exercise 6: Plot both series over time on separate plots. Add a trend line using geom_smooth(). Can you say something about the trend just by visualizing the data?
 
+BRA_temp.plot <- ggplot(BRA_complete, aes(x = Date, y = Temperature_C)) + 
+  geom_point() +
+  geom_smooth(method=lm)
+print(BRA_temp.plot)
 
+BRA_rain.plot <- ggplot(BRA_complete, aes(x = Date, y = Rainfall )) +
+  geom_point()+
+  geom_smooth(method=lm)
+print(BRA_rain.plot)
 
 
 
@@ -98,7 +106,10 @@ BRA_complete <- inner_join(Rainfall_BR_processed,Temp_BR_processed)
 
 ```{r}
 #Exercise 7: Create a time series objects for each series using ts(). Make sure you specify the starting point and frequency.
-
+f_month <- month(first(BRA_complete$Date))
+f_year <- year(first(BRA_complete$Date))
+BRA_temp_ts <- ts(BRA_complete$Temperature_C, start = c(f_year,f_month),frequency=12)
+BRA_rain_ts <- ts(BRA_complete$Rainfall, start = c(f_year,f_month),frequency=12)
 
 
 ```
@@ -121,22 +132,31 @@ The `stl` function decomposes the time series object into its component parts. W
 # Exercise 8: Use the stl() function to decompose both series. 
 # Visualize the decomposed series using plot(). What components can you identify?
 
-
-
-
+BRA_temp_decomp <- stl(BRA_temp_ts, s.window = "periodic")
+plot(BRA_temp_decomp)
+BRA_rain_decomp <- stl(BRA_rain_ts, s.window = "periodic")
+plot(BRA_rain_decomp)
 
 
 # Exercise 9: Use the times series object generated with the stl() to extract the 
 # components of each series and turn them into data frames.
+BRA_temp_Components <- as.data.frame(BRA_temp_decomp$time.series[,1:3])
 
+BRA_temp_Components <- mutate(BRA_temp_Components,
+        Observed = BRA_complete$Temperature_C,     
+        Date = BRA_complete$Date)
 
+BRA_rain_Components <- as.data.frame(BRA_rain_decomp$time.series[,1:3])
 
-
-
+BRA_rain_Components <- mutate(BRA_rain_Components,
+        Observed = BRA_complete$Rainfall,     
+        Date = BRA_complete$Date)
 
 # Exercise 10: Visualize how the trend maps onto the data for both series
-
-
+BRA_rain_components.plot <- ggplot(BRA_rain_Components)+
+  geom_line(aes(y = Observed, x = Date),  size = 0.25) +
+  geom_line(aes(y = trend, x = Date), color = "#c13d75ff") 
+print(BRA_rain_components.plot)
 
 
 
@@ -158,25 +178,19 @@ Monotonic trends are a gradual shift over time that is consistent in direction. 
 
 # Exercise 11: Apply one of the trend detection test to the original data set. Remember that the data has seasonal component, which test can be applied in this case?
 
+BRA_temp_trend <- Kendall::SeasonalMannKendall(BRA_temp_ts)
+summary(BRA_temp_trend)
 
-
-
-
-
-
-
+BRA_rain_trend <- Kendall::SeasonalMannKendall(BRA_rain_ts)
+summary(BRA_rain_trend)
 
 # Exercise 12: Now remove the seasonality and apply another test. Compare the results with what you obtained on Exercise 9.
 
+BRA_temp_trend2 <- Kendall::SeasonalMannKendall(BRA_temp_ts-BRA_temp_Components$seasonal)
+summary(BRA_temp_trend2)
 
-
-
-
-
-
-
-
-
+BRA_rain_trend2 <- Kendall::SeasonalMannKendall(BRA_rain_ts-BRA_rain_Components$seasonal)
+summary(BRA_rain_trend2)
 
 ```
 
